--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,7 @@
     font-family: "Roboto", sans-serif;
 }
 
-/*
-layout
-*/
+
 
 body{
     display: grid;
@@ -32,6 +30,24 @@ a{
 }
 h1{
     font-size: 1.5rem;
+}
+hr{
+    border: solid 1px rgba(255, 255, 255, 0.1);
+    margin: 12px 0 12px 0;
+
+}
+h4{
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    color: #aaa;
+    margin-left: 20px;
+
+}
+i{
+    font-size: 1.5rem;  
+}
+p,a{
+    font-size: 0.9rem;
 }
 .logo-img{
     position: relative;
@@ -132,6 +148,25 @@ h1{
 }
 .sidebar{
     grid-area: sidebar;
+    background-color: #121212;
+    padding-top: 10px;
+}
+.sidebar-items{
+    display: flex;
+    flex-direction: column;
+    padding: 0 14px;
+}
+.sidebar-item{
+    color: #fff;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+.sidebar-item:hover{
+    background-color: #313131;
 }
 .content{
     grid-area: content;
