--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url(/css/roots.css);
-@import url(/css/header.css);
-@import url(/css/sidebar.css);
-@import url(/css/chips.css);
-@import url(/css/main.css);
-@import url(/css/etiquetas.css);
-@import url(/css/media.css);
+@import url(roots.css);
+@import url(header.css);
+@import url(sidebar.css);
+@import url(chips.css);
+@import url(main.css);
+@import url(etiquetas.css);
+@import url(media.css);
 
 
 *{
